--- a/README
+++ b/README
@@ -113,6 +113,13 @@ simpler example, look at RegularExpressions.word.  This is a static factory
 method for a simple word-based regular expression where only the string is
 considered.  This factory is used in the test cases.
 
+You can also play around with RegularExpressions.word by running the main
+method in RegularExpression and specifying an expression with arg1.
+
+    mvn compile exec:java 
+        -Dexec.mainClass=edu.washington.cs.knowitall.regex.RegularExpression 
+        -Dexec.args="<the> <fat>* <cows> <are> <mooing> (?:<loudly>)?"
+
 
 LOGIC EXPRESSIONS
 
@@ -129,7 +136,8 @@ rewriting the apply method in BaseExpression inside the compile method.
 Most of the code below existed before--now it's just moved outside the
 apply method.
 
-    val logic = LogicExpression.compile(value, new Function[String, Tok.Arg[WordToken]]() {
+    val logic = LogicExpression.compile(value, 
+    new Function[String, Tok.Arg[WordToken]]() {
       override def apply(expr: String) = {
         new Arg.Pred[String](expr) {
           val Array(part, value) = expr.split("=")
@@ -145,6 +153,10 @@ apply method.
     override def apply(entity: WordToken) = {
       logic.apply(entity)
     }
+
+Play around with logic expression by using the main method in LogicExpression.
+
+  mvn exec:java -Dexec.mainClass=edu.washington.cs.knowitall.logic.LogicExpression
 
 
 IMPLEMENTATION
